--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Nunito', sans-serif;
+}
+
 .container {
   max-width: 400px;
   margin: 10vh auto 0 auto;
@@ -10,6 +14,8 @@
   line-height: 70px;
   padding: 16px 8px;
   font-size: 25px;
+  overflow: hidden;
+  direction: rtl;
 }
 
 .buttons {
