--- a/style.css
+++ b/style.css
@@ -1,49 +1,60 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+}
+
 body {
-  font-family: 'Nunito', sans-serif;
+  padding: 0;
+  margin: 0;
+  background: linear-gradient(to right, #00aaff, #00ff6c);
 }
 
-.container {
-  max-width: 400px;
-  margin: 10vh auto 0 auto;
-  box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
-}
-
-#display {
-  text-align: right;
-  height: 70px;
-  line-height: 70px;
-  padding: 16px 8px;
-  font-size: 25px;
-  overflow: hidden;
-  direction: rtl;
-}
-
-.buttons {
+.calculator-grid {
   display: grid;
-  border-bottom: 1px solid #999;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
-.buttons > div {
-  border-top: 1px solid #999;
-  border-right: 1px solid #999;
-}
-
-.button {
-  border: 0.5px solid #999;
-  line-height: 100px;
-  text-align: center;
-  font-size: 25px;
+.calculator-grid > button {
   cursor: pointer;
+  font-size: 2rem;
+  border: 1px solid white;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.75);
 }
 
-#equal {
-  background-color: #5555ff;
-  color: white;
+.calculator-grid > button:hover {
+  background-color: rgba(255, 255, 255, 9);
 }
 
-.button:hover {
-  background-color: #323330;
+.span-two {
+  grid-column: span 2;
+}
+
+.output {
+  grid-column: 1 / -1;
+  background-color: rgba(0, 0, 0, 0.75);
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+.output .previous-operand {
+  color: rgba(255, 255, 255, 0.75);
+  font-size: 1.5rem;
+}
+
+.output .current-operand {
   color: white;
-  transition: 0.5s ease-in-out;
+  font-size: 2.5rem;
 }
